--- a/public/index.html
+++ b/public/index.html
@@ -866,61 +866,174 @@
 
     <h1 class="vz-page__header">cards</h1>
     <section class="ks-section">
-      <div class="row">
-        <div class="col-xs-6">
-          <div class="vz-card">
-            <div class="vz-card__header">
-              <div class="vz-card__title">Card Sample</div>
-              <div class="vz-card__description">Nisi eu ex proident quis in. Quis sunt elit sit mollit adipisicing. Minim culpa est amet do ullamco cillum cillum veniam aliqua. Nostrud aliquip ad non incididunt in sunt officia eu ullamco. Duis nostrud pariatur nulla et adipisicing.</div>
-            </div>
-            <div class="vz-card__separator"></div>
-            <div class="vz-card__image">
-              <img src="https://images.unsplash.com/photo-1519871780814-cae0d930ec58?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="alpaca">
-            </div>
-            <div class="vz-card__content">
-              <dl>
-                <dt>Início</dt>
-                <dd>01/09/2019 - 12:01</dd>
-                <dt>Término</dt>
-                <dd>01/09/2019 - 12:50</dd>
-                <dt>Total de horas</dt>
-                <dd>00:49</dd>
-                <dt>Notas</dt>
-                <dd>Nisi eu ex proident quis in. Quis sunt elit sit mollit adipisicing. Minim culpa est amet do ullamco cillum cillum veniam aliqua. Nostrud aliquip ad non incididunt in sunt officia eu ullamco. Duis nostrud pariatur nulla et adipisicing.</dd>
-              </dl>
-            </div>
-            <div class="vz-card__footer">
-              <button class="vz-button vz-button--danger vz-button--small" type="">Delete</button>
-              <button class="vz-button vz-button--secondary vz-button--small" type="">Edit</button>
-            </div>
+      <h2>Full cards</h2>
+      <div class="row ks-cards">
+        <div class="vz-card">
+          <div class="vz-card__header">
+            <div class="vz-card__title">Card Sample</div>
+            <div class="vz-card__description">Nisi eu ex proident quis in. Quis sunt elit sit mollit adipisicing. Minim culpa est amet do ullamco cillum cillum veniam aliqua. Nostrud aliquip ad non incididunt in sunt officia eu ullamco. Duis nostrud pariatur nulla et adipisicing.</div>
+          </div>
+          <div class="vz-card__separator"></div>
+          <div class="vz-card__image">
+            <img src="https://images.unsplash.com/photo-1519871780814-cae0d930ec58?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="alpaca">
+          </div>
+          <div class="vz-card__content">
+            <dl>
+              <dt>Início</dt>
+              <dd>01/09/2019 - 12:01</dd>
+              <dt>Término</dt>
+              <dd>01/09/2019 - 12:50</dd>
+              <dt>Total de horas</dt>
+              <dd>00:49</dd>
+              <dt>Notas</dt>
+              <dd>Nisi eu ex proident quis in. Quis sunt elit sit mollit adipisicing. Minim culpa est amet do ullamco cillum cillum veniam aliqua. Nostrud aliquip ad non incididunt in sunt officia eu ullamco. Duis nostrud pariatur nulla et adipisicing.</dd>
+            </dl>
+          </div>
+          <div class="vz-card__footer">
+            <button class="vz-button vz-button--danger vz-button--small" type="">Delete</button>
+            <button class="vz-button vz-button--secondary vz-button--small" type="">Edit</button>
           </div>
         </div>
-        <div class="col-xs-6">
-          <div class="vz-card">
-            <!-- <div class="vz-card__header">
-              <div class="vz-card__title">Card Sample</div>
-              <div class="vz-card__description">Nisi eu ex proident quis in. Quis sunt elit sit mollit adipisicing. Minim culpa est amet do ullamco cillum cillum veniam aliqua. Nostrud aliquip ad non incididunt in sunt officia eu ullamco. Duis nostrud pariatur nulla et adipisicing.</div>
-            </div>
-            <div class="vz-card__separator"></div>
-            <div class="vz-card__image">
-              <img src="https://images.unsplash.com/photo-1517955935808-4e2d8955d3af?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="alpaca">
-            </div> -->
-            <div class="vz-card__content">
-              <dl>
-                <dt>Início</dt>
-                <dd>01/09/2019 - 12:01</dd>
-                <dt>Término</dt>
-                <dd>01/09/2019 - 12:50</dd>
-                <dt>Total de horas</dt>
-                <dd>00:49</dd>
-                <dt>Notas</dt>
-                <dd>Nisi eu ex proident quis in. Quis sunt elit sit mollit adipisicing. Minim culpa est amet do ullamco cillum cillum veniam aliqua. Nostrud aliquip ad non incididunt in sunt officia eu ullamco. Duis nostrud pariatur nulla et adipisicing.</dd>
-              </dl>
-            </div>
-            <div class="vz-card__footer">
-              <button class="vz-button vz-button--danger vz-button--small" type="">Delete</button>
-              <button class="vz-button vz-button--secondary vz-button--small" type="">Edit</button>
-            </div>
+        <div class="vz-card">
+          <div class="vz-card__header">
+            <div class="vz-card__title">Card Sample</div>
+            <div class="vz-card__description">Nisi eu ex proident quis in. Quis sunt elit sit mollit adipisicing. Minim culpa est amet do ullamco cillum cillum veniam aliqua. Nostrud aliquip ad non incididunt in sunt officia eu ullamco. Duis nostrud pariatur nulla et adipisicing.</div>
+          </div>
+          <div class="vz-card__separator"></div>
+          <div class="vz-card__image">
+            <img src="https://images.unsplash.com/photo-1517955935808-4e2d8955d3af?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="alpaca">
+          </div>
+          <div class="vz-card__content">
+            <dl>
+              <dt>Início</dt>
+              <dd>01/09/2019 - 12:01</dd>
+              <dt>Término</dt>
+              <dd>01/09/2019 - 12:50</dd>
+              <dt>Total de horas</dt>
+              <dd>00:49</dd>
+              <dt>Notas</dt>
+              <dd>Nisi eu ex proident quis in. Quis sunt elit sit mollit adipisicing. Minim culpa est amet do ullamco cillum cillum veniam aliqua. Nostrud aliquip ad non incididunt in sunt officia eu ullamco. Duis nostrud pariatur nulla et adipisicing. Nostrud aliquip ad non incididunt in sunt officia eu ullamco. Duis nostrud pariatur nulla et adipisicing</dd>
+            </dl>
+          </div>
+          <div class="vz-card__footer">
+            <button class="vz-button vz-button--danger vz-button--small" type="">Delete</button>
+            <button class="vz-button vz-button--secondary vz-button--small" type="">Edit</button>
+          </div>
+        </div>
+        <div class="vz-card">
+          <div class="vz-card__header">
+            <div class="vz-card__title">Card Sample</div>
+            <div class="vz-card__description">Nisi eu ex proident quis in. Quis sunt elit sit mollit adipisicing. Minim culpa est amet do ullamco cillum cillum veniam aliqua. Nostrud aliquip ad non incididunt in sunt officia eu ullamco. Duis nostrud pariatur nulla et adipisicing.</div>
+          </div>
+          <div class="vz-card__separator"></div>
+          <div class="vz-card__image">
+            <img src="https://images.unsplash.com/photo-1511885663737-eea53f6d6187?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="alpaca">
+          </div>
+          <div class="vz-card__content">
+            <dl>
+              <dt>Início</dt>
+              <dd>01/09/2019 - 12:01</dd>
+              <dt>Término</dt>
+              <dd>01/09/2019 - 12:50</dd>
+              <dt>Total de horas</dt>
+              <dd>00:49</dd>
+              <dt>Notas</dt>
+              <dd>Nisi eu ex proident quis in. Quis sunt elit sit mollit adipisicing. Minim culpa est amet do ullamco cillum cillum veniam aliqua. Nostrud aliquip ad non incididunt in sunt officia eu ullamco. Duis nostrud pariatur nulla et adipisicing.</dd>
+            </dl>
+          </div>
+          <div class="vz-card__footer">
+            <button class="vz-button vz-button--danger vz-button--small" type="">Delete</button>
+            <button class="vz-button vz-button--secondary vz-button--small" type="">Edit</button>
+          </div>
+        </div>
+      </div>
+      <h2>cards with content and footer</h2>
+      <div class="row ks-cards">
+        <div class="vz-card">
+          <div class="vz-card__content">
+            <dl>
+              <dt>Início</dt>
+              <dd>01/09/2019 - 12:01</dd>
+              <dt>Término</dt>
+              <dd>01/09/2019 - 12:50</dd>
+              <dt>Total de horas</dt>
+              <dd>00:49</dd>
+              <dt>Notas</dt>
+              <dd>Nisi eu ex proident quis in. Quis sunt elit sit mollit adipisicing. Minim culpa est amet do ullamco cillum cillum veniam aliqua. Nostrud aliquip ad non incididunt in sunt officia eu ullamco. Duis nostrud pariatur nulla et adipisicing.</dd>
+            </dl>
+          </div>
+          <div class="vz-card__footer">
+            <button class="vz-button vz-button--danger vz-button--small" type="">Delete</button>
+            <button class="vz-button vz-button--secondary vz-button--small" type="">Edit</button>
+          </div>
+        </div>
+        <div class="vz-card">
+          <div class="vz-card__content">
+            <dl>
+              <dt>Início</dt>
+              <dd>01/09/2019 - 12:01</dd>
+              <dt>Término</dt>
+              <dd>01/09/2019 - 12:50</dd>
+              <dt>Total de horas</dt>
+              <dd>00:49</dd>
+              <dt>Notas</dt>
+              <dd>Nisi eu ex proident quis in. Quis sunt elit sit mollit adipisicing. Minim culpa est amet do ullamco cillum cillum veniam aliqua. Nostrud aliquip ad non incididunt in sunt officia eu ullamco. Duis nostrud pariatur nulla et adipisicing. Quis sunt elit sit mollit adipisicing.</dd>
+            </dl>
+          </div>
+          <div class="vz-card__footer">
+            <button class="vz-button vz-button--danger vz-button--small" type="">Delete</button>
+            <button class="vz-button vz-button--secondary vz-button--small" type="">Edit</button>
+          </div>
+        </div>
+        <div class="vz-card">
+          <div class="vz-card__content">
+            <dl>
+              <dt>Início</dt>
+              <dd>01/09/2019 - 12:01</dd>
+              <dt>Término</dt>
+              <dd>01/09/2019 - 12:50</dd>
+              <dt>Total de horas</dt>
+              <dd>00:49</dd>
+              <dt>Notas</dt>
+              <dd>Nisi eu ex proident quis in.</dd>
+            </dl>
+          </div>
+          <div class="vz-card__footer">
+            <button class="vz-button vz-button--danger vz-button--small" type="">Delete</button>
+            <button class="vz-button vz-button--secondary vz-button--small" type="">Edit</button>
+          </div>
+        </div>
+      </div>
+      <h2>cards with header and image</h2>
+      <div class="row ks-cards">
+        <div class="vz-card">
+          <div class="vz-card__header">
+            <div class="vz-card__title">Card Sample</div>
+            <div class="vz-card__description">Nisi eu ex proident quis in. Quis sunt elit sit mollit adipisicing. Minim culpa est amet do ullamco cillum cillum veniam aliqua. Nostrud aliquip ad non incididunt in sunt officia eu ullamco. Duis nostrud pariatur nulla et adipisicing.</div>
+          </div>
+          <div class="vz-card__separator"></div>
+          <div class="vz-card__image">
+            <img src="https://images.unsplash.com/photo-1511885663737-eea53f6d6187?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="alpaca">
+          </div>
+        </div>
+        <div class="vz-card">
+          <div class="vz-card__header">
+            <div class="vz-card__title">Card Sample</div>
+            <div class="vz-card__description">Nisi eu ex proident quis in. Quis sunt elit sit mollit adipisicing. Minim culpa est amet do ullamco cillum cillum veniam aliqua. Nostrud aliquip ad non incididunt in sunt officia eu ullamco. Duis nostrud pariatur nulla et adipisicing.</div>
+          </div>
+          <div class="vz-card__separator"></div>
+          <div class="vz-card__image">
+            <img src="https://images.unsplash.com/photo-1511885663737-eea53f6d6187?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="alpaca">
+          </div>
+        </div>
+        <div class="vz-card">
+          <div class="vz-card__header">
+            <div class="vz-card__title">Card Sample</div>
+            <div class="vz-card__description">Nisi eu ex proident quis in. Quis sunt elit sit mollit adipisicing. Minim culpa est amet do ullamco cillum cillum veniam aliqua. Nostrud aliquip ad non incididunt in sunt officia eu ullamco. Duis nostrud pariatur nulla et adipisicing.</div>
+          </div>
+          <div class="vz-card__separator"></div>
+          <div class="vz-card__image">
+            <img src="https://images.unsplash.com/photo-1511885663737-eea53f6d6187?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="alpaca">
           </div>
         </div>
       </div>
