--- a/public/index.html
+++ b/public/index.html
@@ -109,6 +109,7 @@
     </div>
 
     <div class="vz-layout__content">
+      <a href="#" class="vz-fab" title="Novo">+</a>
       <h1 class="vz-page__header">Quick start</h1>
       <div class="ks-section">
         <div class="ks-section__container">
