New comment style.

--- a/public/index.html
+++ b/public/index.html
@@ -109,7 +109,7 @@
     </div>
 
     <div class="vz-layout__content">
-      <a href="#" class="vz-fab" title="Novo">+</a>
+      <a href="#" class="vz-fab" title="Criar">+</a>
       <h1 class="vz-page__header">Quick start</h1>
       <div class="ks-section">
         <div class="ks-section__container">
@@ -136,94 +136,120 @@
     <section class="ks-section">
       <div class="vz-container">
         <div class="row">
-            <div class="col-xs-6">
-              <h3>Tail</h3>
-              <div class="vz-comment vz-comment--tail-left">
-                <div class="vz-comment__body">
-                  <p>Lorem ipsum dolor sit amet</p>
-                </div>
-                <div class="vz-comment__actions">
-                  <div class="vz-link vz-button--micro">remove comment</div>
-                </div>
+          <div class="col-xs-6">
+            <h3>Tail</h3>
+            <div class="vz-comment vz-comment--tail-left">
+              <div class="vz-comment__body">
+                <p>Lorem ipsum dolor sit amet</p>
               </div>
-              <div class="vz-comment vz-comment--tail-left">
-                <div class="vz-comment__body">
-                  <p>Consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-                </div>
-                <div class="vz-comment__actions">
-                  <div class="vz-link vz-button--micro">remove comment</div>
-                </div>
-              </div>
-              <div class="vz-comment vz-comment--tail-left vz-comment--is-active-left">
-                <div class="vz-comment__body">
-                  <p>Lorem ipsum dolor sit amet</p>
-                </div>
-                <div class="vz-comment__actions">
-                  <div class="vz-link vz-button--micro">remove comment</div>
-                </div>
-              </div>
-              <div class="vz-comment vz-comment--tail-right vz-comment--is-active-right">
-                <div class="vz-comment__body">
-                  <p>Consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-                </div>
-                <div class="vz-comment__actions">
-                  <div class="vz-link vz-button--micro">remove comment</div>
-                </div>
-              </div>
-              <div class="vz-comment vz-comment--tail-right">
-                <div class="vz-comment__body">
-                  <p>Lorem ipsum dolor sit amet</p>
-                </div>
-                <div class="vz-comment__actions">
-                  <div class="vz-link vz-button--micro">remove comment</div>
-                </div>
+              <div class="vz-comment__actions">
+                <div class="vz-link vz-button--micro">remove comment</div>
               </div>
             </div>
+            <div class="vz-comment vz-comment--tail-left">
+              <div class="vz-comment__body">
+                <p>Consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+              </div>
+              <div class="vz-comment__actions">
+                <div class="vz-link vz-button--micro">remove comment</div>
+              </div>
+            </div>
+            <div class="vz-comment vz-comment--tail-left vz-comment--is-active-left">
+              <div class="vz-comment__body">
+                <p>Lorem ipsum dolor sit amet</p>
+              </div>
+              <div class="vz-comment__actions">
+                <div class="vz-link vz-button--micro">remove comment</div>
+              </div>
+            </div>
+            <div class="vz-comment vz-comment--tail-right vz-comment--is-active-right">
+              <div class="vz-comment__body">
+                <p>Consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+              </div>
+              <div class="vz-comment__actions">
+                <div class="vz-link vz-button--micro">remove comment</div>
+              </div>
+            </div>
+            <div class="vz-comment vz-comment--tail-right">
+              <div class="vz-comment__body">
+                <p>Lorem ipsum dolor sit amet</p>
+              </div>
+              <div class="vz-comment__actions">
+                <div class="vz-link vz-button--micro">remove comment</div>
+              </div>
+            </div>
+          </div>
 
-              <div class="col-xs-6">
-                <h3>No tail</h3>
-                <div class="vz-comment vz-comment--notail">
-                  <div class="vz-comment__body">
-                    <p>Lorem ipsum dolor sit amet</p>
-                  </div>
-                  <div class="vz-comment__actions">
-                    <div class="vz-link vz-button--micro">remove comment</div>
-                  </div>
-                </div>
-                <div class="vz-comment vz-comment--notail">
-                  <div class="vz-comment__body">
-                    <p>Lorem ipsum dolor sit amet</p>
-                  </div>
-                  <div class="vz-comment__actions">
-                    <div class="vz-link vz-button--micro">remove comment</div>
-                  </div>
-                </div>
-                <div class="vz-comment vz-comment--notail">
-                  <div class="vz-comment__body">
-                    <p>Lorem ipsum dolor sit amet</p>
-                  </div>
-                  <div class="vz-comment__actions">
-                    <div class="vz-link vz-button--micro">remove comment</div>
-                  </div>
-                </div>
-                <div class="vz-comment vz-comment--notail">
-                  <div class="vz-comment__body">
-                    <p>Ut esse mollit est dolore reprehenderit voluptate ullamco laboris exercitation eiusmod fugiat dolore.</p>
-                  </div>
-                  <div class="vz-comment__actions">
-                    <div class="vz-link vz-button--micro">remove comment</div>
-                  </div>
-                </div>
-                <div class="vz-comment vz-comment--notail vz-comment--is-active">
-                  <div class="vz-comment__body">
-                    <p>Ut esse mollit est dolore reprehenderit voluptate ullamco laboris exercitation eiusmod fugiat dolore.</p>
-                  </div>
-                  <div class="vz-comment__actions">
-                    <div class="vz-link vz-button--micro">remove comment</div>
-                  </div>
-                </div>
+          <div class="col-xs-6">
+            <h3>No tail</h3>
+            <div class="vz-comment vz-comment--notail">
+              <div class="vz-comment__body">
+                <p>Lorem ipsum dolor sit amet</p>
+              </div>
+              <div class="vz-comment__actions">
+                <div class="vz-link vz-button--micro">remove comment</div>
               </div>
             </div>
+            <div class="vz-comment vz-comment--notail">
+              <div class="vz-comment__body">
+                <p>Lorem ipsum dolor sit amet</p>
+              </div>
+              <div class="vz-comment__actions">
+                <div class="vz-link vz-button--micro">remove comment</div>
+              </div>
+            </div>
+            <div class="vz-comment vz-comment--notail">
+              <div class="vz-comment__body">
+                <p>Lorem ipsum dolor sit amet</p>
+              </div>
+              <div class="vz-comment__actions">
+                <div class="vz-link vz-button--micro">remove comment</div>
+              </div>
+            </div>
+            <div class="vz-comment vz-comment--notail">
+              <div class="vz-comment__body">
+                <p>Ut esse mollit est dolore reprehenderit voluptate ullamco laboris exercitation eiusmod fugiat dolore.</p>
+              </div>
+              <div class="vz-comment__actions">
+                <div class="vz-link vz-button--micro">remove comment</div>
+              </div>
+            </div>
+            <div class="vz-comment vz-comment--notail vz-comment--is-active">
+              <div class="vz-comment__body">
+                <p>Ut esse mollit est dolore reprehenderit voluptate ullamco laboris exercitation eiusmod fugiat dolore.</p>
+              </div>
+              <div class="vz-comment__actions">
+                <div class="vz-link vz-button--micro">remove comment</div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <h3>User name and time</h3>
+        <div class="row">
+          <div class="col-xs-6">
+            <div class="vz-comment vz-comment--whowhen">
+              <div class="vz-comment__info">
+                User 01 - 16/01/2019 - 17:49
+              </div>
+              <div class="vz-comment__separator"></div>
+              <div class="vz-comment__body">
+                <p>Lorem ipsum dolor sit amet</p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-xs-6">
+            <div class="vz-comment vz-comment--whowhen">
+              <div class="vz-comment__info">
+                User 02 - 16/01/2019 - 18:10
+              </div>
+              <div class="vz-comment__body">
+                <p>Lorem ipsum dolor sit amet</p>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
     </section>
 
