refactor variable names.

--- a/public/index.html
+++ b/public/index.html
@@ -315,12 +315,16 @@
         <span>Dislike</span>
         <i class="icon ion-md-thumbs-down"></i>
       </a>
-      <h2>with ionicons large</h2>
-      <a class="vz-button vz-button--outline vz-button--uses-icon vz-button__icon--large" href="#" role="button">
+      <h2>with ionicons sizes</h2>
+      <a class="vz-button vz-button--outline vz-button--uses-icon" href="#" role="button">
+        <i class="icon ion-logo-facebook"></i>
+        <span>Facebook</span>
+      </a>
+      <a class="vz-button vz-button--outline vz-button--uses-icon vz-button--use-icon-medium" href="#" role="button">
         <i class="icon ion-logo-github"></i>
         <span>GitHub</span>
       </a>
-      <a class="vz-button vz-button--outline vz-button--outline-no vz-button--uses-icon vz-button__icon--large" href="#" role="button">
+      <a class="vz-button vz-button--outline vz-button--outline-no vz-button--uses-icon vz-button--use-icon-large" href="#" role="button">
         <i class="icon ion-logo-youtube"></i>
         <span>YouTube</span>
       </a>
