Ionicons instructions update

--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Titillium+Web:400,600">
   <link rel="stylesheet" type="text/css" href="main.css">
   <link rel="stylesheet" type="text/css" href="https://unpkg.com/flexboxgrid@6.3.1/dist/flexboxgrid.min.css">
-  <link href="https://unpkg.com/ionicons@4.5.0/dist/css/ionicons.min.css" rel="stylesheet">
+  <link rel="stylesheet" type="text/css" href="https://unpkg.com/ionicons@4.5.0/dist/css/ionicons.min.css">
 </head>
 <body>
 
@@ -183,7 +183,7 @@
           </div>
           <p>We are using Ionicons, so if you want to use the same icons copy-paste <code class="ks-highlighter">&lt;link></code> into your <code class="ks-highlighter">&lt;head></code>:</p>
           <div class="ks-figure">
-            <pre><code>&lt;<span class="ks-nt">link</span> <span class="ks-na">rel=</span><span class="ks-s">"stylesheet"</span> <span class="ks-na">type=</span><span class="ks-s">"text/css"</span> <span class="ks-na">src=</span><span class="ks-s">"https://unpkg.com/ionicons@4.5.0/dist/css/ionicons.min.css"</span>></code></pre>
+            <pre><code>&lt;<span class="ks-nt">link</span> <span class="ks-na">rel=</span><span class="ks-s">"stylesheet"</span> <span class="ks-na">type=</span><span class="ks-s">"text/css"</span> <span class="ks-na">href=</span><span class="ks-s">"https://unpkg.com/ionicons@4.5.0/dist/css/ionicons.min.css"</span>></code></pre>
           </div>
           <p>And if you want to use a Grid system you can use the following:</p>
           <div class="ks-figure">
